# programming-experiments

./: Cargo.toml  README.md  rustfmt.toml  taplo.toml
crates/c-lexer/: Cargo.toml
crates/c-lexer/src/: lib.rs  main.rs
crates/evaluation-strategies/: Cargo.toml
crates/evaluation-strategies/src/: big_step.rs  small_step.rs  syntax.rs
crates/expr-parser/: Cargo.toml
crates/expr-parser/src/: lexer.rs  main.rs
crates/json-parser/: Cargo.toml
crates/json-parser/src/: cps.rs  defunctionalised_cps.rs  double_barrelled_cps.rs  explicit_stack.rs  lib.rs  stack_allocated_cps.rs
evaluation-strategies/: Cargo.toml
evaluation-strategies/src/: big_step.rs  lib.rs  small_step.rs  syntax.rs
json-parser/src/: big_step.rs  defunctionalised_cps.rs  explicit_stack.rs  lib.rs
