workspace.resolver = "3"
workspace.members = ["crates/*"]
workspace.package.edition = "2024"

[workspace.lints]
rust.unused_qualifications = { level = "warn" }
rustdoc.all = { level = "warn" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
type_complexity = { level = "allow", priority = 100 }
must_use_candidate = { level = "allow", priority = 100 }
missing_panics_doc = { level = "allow", priority = 100 }
missing_errors_doc = { level = "allow", priority = 100 }
option_if_let_else = { level = "allow", priority = 100 }
