workspace.members         = ["crates/*"]
workspace.package.edition = "2024"
workspace.resolver        = "3"

[workspace.lints]
clippy.all                 = { level = "warn", priority = -1 }
clippy.nursery             = { level = "warn", priority = -1 }
clippy.pedantic            = { level = "warn", priority = -1 }
rust.unused_qualifications = { level = "warn", priority = -1 }
rustdoc.all                = { level = "warn", priority = -1 }

clippy.cast_precision_loss = { level = "allow" }
clippy.missing_errors_doc  = { level = "allow" }
clippy.missing_panics_doc  = { level = "allow" }
clippy.must_use_candidate  = { level = "allow" }
clippy.option_if_let_else  = { level = "allow" }
clippy.similar_names       = { level = "allow" }
clippy.single_match_else   = { level = "allow" }
clippy.too_many_lines      = { level = "allow" }
clippy.type_complexity     = { level = "allow" }

[workspace.dependencies]
expect-test = { version = "1.5.1" }

[profile.release]
codegen-units = 1
lto           = true
panic         = "abort"
